--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Rosarivo&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="scss/main.css">
-        <link rel="stylesheet" href="scss/loader.css">
+        <!-- <link rel="stylesheet" href="scss/loader.css"> -->
         <script src="https://kit.fontawesome.com/2e296f9362.js" crossorigin="anonymous"></script>
-        <script>
+        <!-- <script>
             document.onreadystatechange = function() { 
                 if (document.readyState !== "complete") { 
                     document.querySelector("#portfolio").style.visibility = "hidden"; 
@@ -22,11 +22,11 @@
                     document.querySelector("#portfolio").style.visibility = "visible"; 
                 } 
             }; 
-        </script>
+        </script> -->
     </head>
     <body>
         <!-- loader -->
-        <div id="loader" class="loader">
+        <!-- <div id="loader" class="loader">
             <div class="loader-inner">
                 <div class="loader-line-wrap">
                     <div class="loader-line"></div>
@@ -44,10 +44,10 @@
                     <div class="loader-line"></div>
                 </div>
             </div>
-        </div> 
+        </div>  -->
 
         <div id='portfolio'>
-                <div class="background">
+            <div class="background">
                 <nav>
                     <ul>
                         <li><a href='index.html' class='nav-about'>About</a></li>
@@ -101,8 +101,13 @@
                         <p>I'm a front-end developer who was born in Poland, lives in Ireland. </p>
                         <p>I started my adventure with web tech in 2018, I've been constantly growing my skills.</p>
                         <p>Fascinated by developing dynamic and interactive websites and applications.</p>
-                        <p>Fall in love with <span><a href='https://www.javascript.com/' target='blank'>JavaScript</a></span>, <span><a href='https://reactjs.org/' target="blank">React.js</a></span>, <span><a href='https://sass-lang.com/' target="blank">SASS</a></span>, <span><a href='https://reactjs.org/' target="blank">React.js</a></span>, <span><a href='https://greensock.com/gsap/GSAP' target="blank">GSAP</a></span>, and <span><a href='https://www.w3schools.com/css/css3_animations.asp' target="blank">CSS animations</a></span>.</p>
-                    
+                        <p>Fall in love with 
+                            <span><a href='https://www.javascript.com/' target='blank'>JavaScript</a></span>, 
+                            <span><a href='https://reactjs.org/' target="blank">React.js</a></span>, 
+                            <span><a href='https://sass-lang.com/' target="blank">SASS</a></span>, 
+                            <span><a href='https://greensock.com/gsap/GSAP' target="blank">GSAP</a></span>, 
+                            and <span><a href='https://www.w3schools.com/css/css3_animations.asp' target="blank">CSS animations</a></span>.
+                        </p>
                         <div class="contact">
                             <a href='https://www.linkedin.com/in/nataliabujnowicz/' target='blank'>
                                 <i class="fab fa-linkedin"></i>
