--- a/projects.html
+++ b/projects.html
@@ -10,9 +10,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Rosarivo&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="scss/main.css">
-        <link rel="stylesheet" href="scss/loader.css">
+        <!-- <link rel="stylesheet" href="scss/loader.css"> -->
         <script src="https://kit.fontawesome.com/2e296f9362.js" crossorigin="anonymous"></script>
-        <script>
+        <!-- <script>
             document.onreadystatechange = function() { 
             if (document.readyState !== "complete") { 
                 document.querySelector("#portfolio").style.visibility = "hidden"; 
@@ -22,11 +22,11 @@
                 document.querySelector("#portfolio").style.visibility = "visible"; 
             } 
         }; 
-        </script>
+        </script> -->
     </head>
     <body>
         <!-- loader -->
-        <div id="loader" class="loader">
+        <!-- <div id="loader" class="loader">
             <div class="loader-inner">
                 <div class="loader-line-wrap">
                     <div class="loader-line"></div>
@@ -44,7 +44,7 @@
                     <div class="loader-line"></div>
                 </div>
             </div>
-        </div> 
+        </div>  -->
 
         <div id='portfolio'>
             <div class="background">
