--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         <link rel="stylesheet" href="scss/main.css">
         <!-- <link rel="stylesheet" href="scss/loader.css"> -->
         <script src="https://kit.fontawesome.com/2e296f9362.js" crossorigin="anonymous"></script>
+
+        <script>
+            window.onbeforeunload = function () {
+                window.scrollTo(0, 0);
+            }
+        </script>
+        
         <!-- <script>
             document.onreadystatechange = function() { 
                 if (document.readyState !== "complete") { 
