--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="about-header">
                         <h2>Hello there!</h2>
                         <p>I'm a front-end developer who was born in Poland, lives in Ireland. </p>
-                        <p>I started my adventure with web tech in 2018, I've been constantly growing my skills.</p>
+                        <p>I started my adventure with web tech in 2018, constantly growing my skills.</p>
                         <p>Fascinated by developing dynamic and interactive websites and applications.</p>
                         <p>Fall in love with 
                             <span><a href='https://www.javascript.com/' target='blank'>JavaScript</a></span>, 
