--- a/projects.html
+++ b/projects.html
@@ -116,7 +116,7 @@
                         <!-- description -->
                         <div class='portfolio-box-content txt-scroll mySlides1'> 
                             <h2>Touch Mountains</h2>
-                            <p>Touch Mountains - a company based in Tasch, Switzerland. It helps in organizing unforgettable trips to the higher mountain of the world! With them, you can see and touch mountains such as Matterhorn and Eiger in Switzerland, visit Machu Pichu in Peru or explore the Himalayas and Karakoram. </p>  
+                            <!-- <p>Touch Mountains - a company based in Tasch, Switzerland. It helps in organizing unforgettable trips to the higher mountain of the world! With them, you can see and touch mountains such as Matterhorn and Eiger in Switzerland, visit Machu Pichu in Peru or explore the Himalayas and Karakoram. </p>   -->
                             <p>The website was created as a part of React.js learning. As a mountain enthusiast, I decided to use my skills to create a beautiful website for those who love to climb, hike and conquer the peaks of the mountains. Website design, page layout, colors, added videos, and images are my idea. </p>
                         </div>
                         <!-- img -->
