--- a/projects.html
+++ b/projects.html
@@ -174,11 +174,16 @@
                     <!-- description -->
                     <div class='portfolio-box-content txt-scroll mySlides1'>
                         <h2>Touch Mountains</h2>
-                        <!-- <p>Touch Mountains - a company based in Tasch, Switzerland. It helps in organizing unforgettable trips to the higher mountain of the world! With them, you can see and touch mountains such as Matterhorn and Eiger in Switzerland, visit Machu Pichu in Peru or explore the Himalayas and Karakoram. </p>   -->
-                        <p>The website was created as a part of React.js learning. As a mountain enthusiast, I decided
-                            to use my skills to create a beautiful website for those who love to climb, hike and conquer
-                            the peaks of the mountains. Website design, page layout, colors, added videos, and images
-                            are my idea. </p>
+                        <p>The Touch Mountains webpage was created as part of React.js learning. As a true mountain
+                            enthusiast, I decided to use my skills to create a beautiful website for lovers of climbing,
+                            hiking, and conquering the peaks of the mountains. The idea of web design was to create a
+                            webpage for a company that helps in organizing unforgettable trips to the higher mountains
+                            of the world! </p>
+                        <p>The structure of the code is clean and readable, the webpage is based on components that are
+                            connected each other by props. There are also added states to change specific components.
+                        </p>
+                        <p> Videos, images, and icons are available as open-source resources here: pexels.com,
+                            unsplash.com, and fontawesome.com</p>
                     </div>
                     <!-- img -->
                     <div class='portfolio-box-content mySlides1'>
@@ -214,12 +219,15 @@
             </div>
             <div class='portfolio-box-content txt-scroll mySlides2'>
                 <h2>Construction Consultations</h2>
-                <p>The project created in 2021 for a Polish construction company operating on the market for over 25
+                <p> The project created in 2021 for a Polish construction company operating on the market for over 25
                     years. Specializes in the construction of detached houses, modernization of high-standard
                     apartments, renovation, etc.</p>
-                <p>Web technologies such as React.js, Framer Motion, Styled Components were used to create the project.
-                    The main goal of the website was to create a readable, modern, and animated website containing the
-                    main information about the construction company.</p>
+                <p> Web technologies such as React.js, Framer Motion, Styled Components were used to create the project.
+                    The
+                    main goal of the website was to create a readable, modern, and animated website containing the main
+                    information about the construction company, FAQ section, contact details.</p>
+                <p> Images and icons are available as open-source resources here: pexels.com, pixabay.com, unsplash.com,
+                    and fontawesome.com</p>
             </div>
             <div class='portfolio-box-content mySlides2'>
                 <img class='img-desktop' src='./assets/img/konsultacje.png'
@@ -253,11 +261,11 @@
     </div>
     <div class='portfolio-box-content txt-scroll mySlides3'>
         <h2>Music App</h2>
-        <p>A lovely music application that lets you choose and play one of the songs from the playlist. All sounds are
-            available on the Chillhop Music platform. </p>
-        <p>The app was created in React.js. It is a part of the Creative React and Redux Course (used: useRef, useState,
-            uuid. Added features: play, pause, update time, select song, skip back/forward, responsive design).
-            The web design and the idea of displaying it as a vinyl record is an original project. </p>
+        <p> A lovely music application that lets you choose and play one of the songs from the playlist. It was created
+            in React.js, as a part of the Creative React and Redux Course (Added features: play, pause, update time,
+            select song, skip back/forward, responsive design. Used for React: useRef, useState, uuid).</p>
+        <p> The web design and the idea of displaying it as a vinyl record is an original project. All sounds and images
+            are available on the Chillhop Music platform.</p>
     </div>
     <div class='portfolio-box-content mySlides3'>
         <img class='img-desktop' src='./assets/img/music.png' alt="Music App - desktop">
@@ -287,10 +295,13 @@
     </div>
     <div class='portfolio-box-content txt-scroll mySlides4'>
         <h2>Meditate App</h2>
-        <p>meditateAPP helps keep calm and relax your mind and body...that's so important nowadays. Just play the chosen
-            sound, watch the video, and take a deep breath! stay calm, relax, and be positive </p>
+        <p>MeditateAPP helps keep calm and relax your mind and body...that's so important nowadays. Just play the chosen
+            sound, watch the video, and take a deep breath! stay calm, relax, and be positive.</p>
         <p>Application created in HTML, CSS, JavaScript. Added features: select music/video, select duration,
             start/stop, page load (css animation).</p>
+        <p>Images, and icons are available as open-source resources here: pexels.com, pixabay.com, unsplash.com, and
+            fontawesome.com.
+        </p>
     </div>
     <div class='portfolio-box-content mySlides4'>
         <img class='img-desktop' src='./assets/img/meditate.jpg' alt="Meditate App - desktop">
@@ -321,7 +332,12 @@
     </div>
     <div class='portfolio-box-content txt-scroll mySlides5'>
         <h2>FOXdesign</h2>
-        <p>Short description what I've done here, why, how, used technologies, used tools, etc</p>
+        <p>Website created for a local web design&development services. The colors used colors and fox's logo refer to
+            the town where the company is based - Foxford in Co. Mayo, Ireland. </p>
+        <p>The main purpose of the website was to display the main information about the offer, prices, web design
+            process, etc. The website was created in web technologies like HTML, CSS, JavaScript, and GSAP. </p>
+        <p>Added animations: GSAP stagger for the main logo, scrollTrigger for appearing text, modal box, slide boxes.
+            The logo was created as an SVG file in Figma to be able to animate it with GSAP. </p>
     </div>
     <div class='portfolio-box-content mySlides5'>
         <img class='img-desktop' src='./assets/img/fox.png' alt="FOXdesign - desktop">
@@ -330,7 +346,7 @@
     <div class="buttons">
         <i onclick="plusSlides(-1, 4)" class="fas fa-long-arrow-alt-left"></i>
         <button><a href='http://www.foxdesign.ie/' target="blank">See live</a></button>
-        <button><a href='https://github.com/NataliaBujnowicz1987/meditateApp' target="blank">Check code</a></button>
+        <button><a href='https://github.com/NataliaBujnowicz1987/FOXdesign3' target="blank">Check code</a></button>
         <i onclick="plusSlides(1, 4)" class="fas fa-long-arrow-alt-right"></i>
     </div>
     </div>
@@ -351,7 +367,14 @@
     </div>
     <div class='portfolio-box-content txt-scroll mySlides6'>
         <h2>Stylove</h2>
-        <p>Short description what I've done here, why, how, used technologies, used tools, etc</p>
+        <p>The main goal of the project was to improve web design nad front-end development skills. The Stylove website
+            can be used by hair & beauty salons, which can add the most important information about specific services,
+            history, prices, offers, contact details, gallery, etc.</p>
+        <p>The Stylove website was created in web technologies such as HTML, CSS, JavaScript. There are added animations
+            such as moving icons or pop-up modal. </p>
+        <p>Images, and icons are available as open-source resources here: pexels.com, pixabay.com, unsplash.com, and
+            fontawesome.com.
+        </p>
     </div>
 
     <div class='portfolio-box-content mySlides6'>
