--- a/projects.html
+++ b/projects.html
@@ -175,14 +175,14 @@
                     <div class='portfolio-box-content txt-scroll mySlides1'>
                         <h2>Touch Mountains</h2>
                         <p>The Touch Mountains webpage was created as part of React.js learning. As a true mountain
-                            enthusiast, I decided to use my skills to create a beautiful website for lovers of climbing,
-                            hiking, and conquering the peaks of the mountains. The idea of web design was to create a
-                            webpage for a company that helps in organizing unforgettable trips to the higher mountains
+                            passionate, I decided to use my skills to create a beautiful website for lovers of climbing,
+                            hiking, and conquering the peaks of the mountains. The idea was to create a
+                            webpage for a company that helps in organizing unforgettable trips to the highest mountains
                             of the world! </p>
-                        <p>The structure of the code is clean and readable, the webpage is based on components that are
-                            connected each other by props. There are also added states to change specific components.
+                        <p>The structure of the code is clean and readable, the webpage is based on components connected
+                            to each other by props. There are also added states to change specific components.
                         </p>
-                        <p> Videos, images, and icons are available as open-source resources here: pexels.com,
+                        <p> Videos, images, and icons are available as open-source resources here at: pexels.com,
                             unsplash.com, and fontawesome.com</p>
                     </div>
                     <!-- img -->
@@ -193,12 +193,16 @@
                             alt="Touch Mountains - mobile device">
                     </div>
 
-                    <div class="buttons">
+                    <div class="buttons-container">
                         <i onclick="plusSlides(-1, 0)" class="fas fa-long-arrow-alt-left"></i>
-                        <button><a href='https://foxdesign-ie.github.io/touch-mountains/' target='blank'>See
-                                live</a></button>
-                        <button><a href='https://github.com/NataliaBujnowicz1987/touch-mountains' target='blank'>Check
-                                code</a></button>
+                        <div class='buttons'>
+                            <button><a href='https://foxdesign-ie.github.io/touch-mountains/' target='blank'>See
+                                    live</a></button>
+                            <button><a href='https://github.com/NataliaBujnowicz1987/touch-mountains'
+                                    target='blank'>Check
+                                    code</a>
+                            </button>
+                        </div>
                         <i onclick="plusSlides(1, 0)" class="fas fa-long-arrow-alt-right"></i>
                     </div>
                 </div>
@@ -236,11 +240,14 @@
                     alt="Konsultacje budowlane - mobile device">
             </div>
 
-            <div class="buttons">
+            <div class="buttons-container">
                 <i onclick="plusSlides(-1, 1)" class="fas fa-long-arrow-alt-left"></i>
-                <button><a href='http://www.konsultacje-budowlane.pl/' target="blank">See live</a></button>
-                <button><a href='https://github.com/NataliaBujnowicz1987/konsultacje-budowlane' target="blank">Check
-                        code</a></button>
+                <div class='buttons'>
+                    <button><a href='http://www.konsultacje-budowlane.pl/' target="blank">See live</a></button>
+                    <button><a href='https://github.com/NataliaBujnowicz1987/konsultacje-budowlane' target="blank">Check
+                            code</a>
+                    </button>
+                </div>
                 <i onclick="plusSlides(1, 1)" class="fas fa-long-arrow-alt-right"></i>
             </div>
         </div>
@@ -271,10 +278,12 @@
         <img class='img-desktop' src='./assets/img/music.png' alt="Music App - desktop">
         <img class='img-mobile' src='./assets/img/music-mobile.jpg' alt="Music App - mobile device">
     </div>
-    <div class="buttons">
+    <div class="buttons-container">
         <i onclick="plusSlides(-1, 2)" class="fas fa-long-arrow-alt-left"></i>
-        <button><a href='https://foxdesign-ie.github.io/music-app/' target="blank">See live</a></button>
-        <button><a href='https://github.com/NataliaBujnowicz1987/MusicApp' target="blank">Check code</a></button>
+        <div class='buttons'>
+            <button><a href='https://foxdesign-ie.github.io/music-app/' target="blank">See live</a></button>
+            <button><a href='https://github.com/NataliaBujnowicz1987/MusicApp' target="blank">Check code</a></button>
+        </div>
         <i onclick="plusSlides(1, 2)" class="fas fa-long-arrow-alt-right"></i>
     </div>
     </div>
@@ -308,10 +317,12 @@
         <img class='img-mobile' src='./assets/img/meditate-mobile.jpg' alt="MeditateApp - mobile device">
     </div>
 
-    <div class="buttons">
+    <div class="buttons-container">
         <i onclick="plusSlides(-1, 3)" class="fas fa-long-arrow-alt-left"></i>
-        <button><a href='https://foxdesign-ie.github.io/meditateAPP/' target="blank">See live</a></button>
-        <button><a href='https://github.com/NataliaBujnowicz1987/meditateApp' target="blank">Check code</a></button>
+        <div class='buttons'>
+            <button><a href='https://foxdesign-ie.github.io/meditateAPP/' target="blank">See live</a></button>
+            <button><a href='https://github.com/NataliaBujnowicz1987/meditateApp' target="blank">Check code</a></button>
+        </div>
         <i onclick="plusSlides(1, 3)" class="fas fa-long-arrow-alt-right"></i>
     </div>
     </div>
@@ -343,10 +354,12 @@
         <img class='img-desktop' src='./assets/img/fox.png' alt="FOXdesign - desktop">
         <img class='img-mobile' src='./assets/img/fox-mobile.jpg' alt="FOXdesign - mobile device">
     </div>
-    <div class="buttons">
+    <div class="buttons-container">
         <i onclick="plusSlides(-1, 4)" class="fas fa-long-arrow-alt-left"></i>
-        <button><a href='http://www.foxdesign.ie/' target="blank">See live</a></button>
-        <button><a href='https://github.com/NataliaBujnowicz1987/FOXdesign3' target="blank">Check code</a></button>
+        <div class='buttons'>
+            <button><a href='http://www.foxdesign.ie/' target="blank">See live</a></button>
+            <button><a href='https://github.com/NataliaBujnowicz1987/FOXdesign3' target="blank">Check code</a></button>
+        </div>
         <i onclick="plusSlides(1, 4)" class="fas fa-long-arrow-alt-right"></i>
     </div>
     </div>
@@ -382,10 +395,12 @@
         <img class='img-mobile' src='./assets/img/stylove-mobile.jpg' alt="STYLOVE - mobile device">
     </div>
 
-    <div class="buttons">
+    <div class="buttons-container">
         <i onclick="plusSlides(-1, 5)" class="fas fa-long-arrow-alt-left"></i>
-        <button><a href='https://nataliabujnowicz1987.github.io/Stylove/' target='blank'>See live</a></button>
-        <button><a href='https://github.com/NataliaBujnowicz1987/Stylove' target='blank'>Check code</a></button>
+        <div class="buttons">
+            <button><a href='https://nataliabujnowicz1987.github.io/Stylove/' target='blank'>See live</a></button>
+            <button><a href='https://github.com/NataliaBujnowicz1987/Stylove' target='blank'>Check code</a></button>
+        </div>
         <i onclick="plusSlides(1, 5)" class="fas fa-long-arrow-alt-right"></i>
     </div>
     </div>
