--- a/projects.html
+++ b/projects.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Natalia Bujnowicz - front end developer</title>
     <meta name="description"
-        content="I'm a front-end developer who was born in Poland, lives in Ireland. Fascinated by developing dynamic and interactive websites and applications. HTML, CSS, JS, REACT.JS, SASS, GSAP." />
+        content="I'm a front-end developer who was born in Poland, lives in Ireland. Fascinated by developing dynamic and interactive websites and applications. I create websites using web tech such us HTML, CSS, JS, REACT.JS, SASS, GSAP." />
     <meta name="keywords"
         content="front end developer, web developer, javascript developer, html css developer, react developer, website developer, web portfolio, website portfolio, webpage portfolio" />
     <!-- styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rosarivo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="scss/main.css">
-    <!-- <link rel="stylesheet" href="scss/loader.css"> -->
+    <link rel="stylesheet" href="scss/loader.css">
     <script src="https://kit.fontawesome.com/2e296f9362.js" crossorigin="anonymous"></script>
     <script>
-        window.onbeforeunload = function () {
-            window.scrollTo(0, 0);
-        }
-    </script>
-    <!-- <script>
-            document.onreadystatechange = function() { 
+        // window.onbeforeunload = function () {
+        //     window.scrollTo(0, 0);
+        // }
+
+        // loading page
+        document.onreadystatechange = function() { 
             if (document.readyState !== "complete") { 
                 document.querySelector("#portfolio").style.visibility = "hidden"; 
                 document.querySelector("#loader").style.visibility = "visible"; 
@@ -30,12 +30,12 @@
                 document.querySelector("#portfolio").style.visibility = "visible"; 
             } 
         }; 
-        </script> -->
+    </script>
 </head>
 
 <body>
     <!-- loader -->
-    <!-- <div id="loader" class="loader">
+    <div id="loader" class="loader">
             <div class="loader-inner">
                 <div class="loader-line-wrap">
                     <div class="loader-line"></div>
@@ -53,7 +53,7 @@
                     <div class="loader-line"></div>
                 </div>
             </div>
-        </div>  -->
+        </div> 
 
     <div id='portfolio'>
         <div class="background">
@@ -175,13 +175,11 @@
                     <div class='portfolio-box-content txt-scroll mySlides1'>
                         <h2>Touch Mountains</h2>
                         <p>The Touch Mountains webpage was created as part of React.js learning. As a true mountain
-                            passionate, I decided to use my skills to create a beautiful website for lovers of climbing,
+                            passionate, I decided to create a beautiful website for lovers of climbing,
                             hiking, and conquering the peaks of the mountains. The idea was to create a
                             webpage for a company that helps in organizing unforgettable trips to the highest mountains
                             of the world! </p>
-                        <p>The structure of the code is clean and readable, the webpage is based on components connected
-                            to each other by props. There are also added states to change specific components.
-                        </p>
+            
                         <p> Videos, images, and icons are available as open-source resources here at: pexels.com,
                             unsplash.com, and fontawesome.com</p>
                     </div>
@@ -224,14 +222,12 @@
             <div class='portfolio-box-content txt-scroll mySlides2'>
                 <h2>Construction Consultations</h2>
                 <p> The project created in 2021 for a Polish construction company operating on the market for over 25
-                    years. Specializes in the construction of detached houses, modernization of high-standard
+                    years. Specialized in the construction of detached houses, modernization of high-standard
                     apartments, renovation, etc.</p>
                 <p> Web technologies such as React.js, Framer Motion, Styled Components were used to create the project.
-                    The
-                    main goal of the website was to create a readable, modern, and animated website containing the main
+                    The main goal of the website was to create a readable, modern, and animated website containing the main
                     information about the construction company, FAQ section, contact details.</p>
-                <p> Images and icons are available as open-source resources here: pexels.com, pixabay.com, unsplash.com,
-                    and fontawesome.com</p>
+          
             </div>
             <div class='portfolio-box-content mySlides2'>
                 <img class='img-desktop' src='./assets/img/konsultacje.png'
@@ -269,8 +265,8 @@
     <div class='portfolio-box-content txt-scroll mySlides3'>
         <h2>Music App</h2>
         <p> A lovely music application that lets you choose and play one of the songs from the playlist. It was created
-            in React.js, as a part of the Creative React and Redux Course (Added features: play, pause, update time,
-            select song, skip back/forward, responsive design. Used for React: useRef, useState, uuid).</p>
+            in React.js, as a part of the Creative React and Redux Course</p>
+            <p>Added features: play/pause music, select song, update time, skip back/forward.</p>
         <p> The web design and the idea of displaying it as a vinyl record is an original project. All sounds and images
             are available on the Chillhop Music platform.</p>
     </div>
@@ -431,5 +427,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
     <script src='main.js'></script>
 </body>
-
 </html>
