--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         // }
 
         // loading page
-        document.onreadystatechange = function() { 
-            if (document.readyState !== "complete") { 
-                document.querySelector("#portfolio").style.visibility = "hidden"; 
-                    ocument.querySelector("#loader").style.visibility = "visible"; 
-            } else { 
-                document.querySelector("#loader").style.display = "none"; 
-                document.querySelector("#portfolio").style.visibility = "visible"; 
-            } 
-        }; 
+        // document.onreadystatechange = function() { 
+        //     if (document.readyState !== "complete") { 
+        //         document.querySelector("#portfolio").style.visibility = "hidden"; 
+        //         document.querySelector("#loader").style.visibility = "visible"; 
+        //     } else { 
+        //         document.querySelector("#loader").style.display = "none"; 
+        //         document.querySelector("#portfolio").style.visibility = "visible"; 
+        //     } 
+        // }; 
     </script>
 </head>
 
