scroll bar for chrome

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="I'm a front-end develope. I was born in Poland, currently living in Ireland. Fascinated by developing dynamic and interactive websites and applications. I create websites using web tech such us HTML, CSS, JS, REACT.JS, SASS, GSAP." />
     <meta name="keywords"
-        content="front end developer, web developer, javascript developer, html css developer, react developer, website developer, web portfolio, website portfolio, webpage portfolio" />
+        content="natalia bujnowicz, front end developer, web developer, javascript developer, html css developer, react developer, website developer, web portfolio, website portfolio, webpage portfolio" />
     <!-- styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rosarivo&display=swap" rel="stylesheet">
