--- a/projects.html
+++ b/projects.html
@@ -357,7 +357,7 @@
                                 the town where the company is based - Foxford in Co. Mayo, Ireland. </p>
                             <p>The main purpose of the website was to display information about the offer, prices, web design
                                 process, etc. The website was created in web technologies like HTML, CSS, JavaScript, and GSAP. </p>
-                            <p>Added animations: GSAP stagger for the main logo, scrollTrigger for appearing text, modal box, slide boxes.
+                            <p>Added animations: GSAP stagger, scrollTrigger, modal box, slide boxes.
                                 The logo was created as an SVG file in Figma to be able to animate it with GSAP. </p>
                         </div>
                     </div>
