--- a/index.html
+++ b/index.html
@@ -15,23 +15,6 @@
     <link rel="stylesheet" href="scss/main.css">
     <link rel="stylesheet" href="scss/loader.css">
     <script src="https://kit.fontawesome.com/2e296f9362.js" crossorigin="anonymous"></script>
-
-    <script>
-        // window.onbeforeunload = function () {
-        //     window.scrollTo(0, 0);
-        // }
-
-        // loading page
-        // document.onreadystatechange = function() { 
-        //     if (document.readyState !== "complete") { 
-        //         document.querySelector("#portfolio").style.visibility = "hidden"; 
-        //         document.querySelector("#loader").style.visibility = "visible"; 
-        //     } else { 
-        //         document.querySelector("#loader").style.display = "none"; 
-        //         document.querySelector("#portfolio").style.visibility = "visible"; 
-        //     } 
-        // }; 
-    </script>
 </head>
 
 <body>
@@ -161,9 +144,9 @@
             <div class="about-header">
                 <h2>Hello there!</h2>
                 <p>I'm a front-end developer. I was born in Poland, currently living in Ireland. </p>
-                <p>I started my adventure with web tech in 2018, constantly growing my skills.</p>
+                <p>I started my adventure with web tech in 2018, I've been constantly growing my skills.</p>
                 <p>Fascinated by developing dynamic and interactive websites and applications.</p>
-                <p>Fall in love with
+                <p>In love with
                     <span><a href='https://www.javascript.com/' target='blank'>JavaScript</a></span>,
                     <span><a href='https://reactjs.org/' target="blank">React.js</a></span>,
                     <span><a href='https://sass-lang.com/' target="blank">SASS</a></span>,
