--- a/projects.html
+++ b/projects.html
@@ -171,7 +171,7 @@
                     <div class='portfolio-box-content mySlides1'>
                         <div class='portfolio-box-content--txt'>
                             <h2>Touch Mountains</h2>
-                            <p>The Touch Mountains webpage was created as part of React.js learning. As a true mountain
+                            <p>The Touch Mountains webpage was created as part of React.js learning module. As a true mountain
                                 passionate, I decided to create a beautiful website for the lovers of climbing and
                                 hiking. The idea was to create a webpage for a company that organizes unforgettable trips to the highest mountains
                                 of the world! </p>
@@ -224,7 +224,7 @@
                                 years. Specialized in the construction of detached houses, modernization of high-standard
                                 apartments, renovation, etc.</p>
                             <p> Web technologies such as React.js, Framer Motion, Styled Components were used to create the project.
-                                The main goal of the website was to create a readable, modern, and animated website containing the main
+                                The main goal of the website was to create a readable, modern, and animated website containing main
                                 information about the construction company, FAQ section, contact details.
                             </p>
                         </div>
@@ -269,9 +269,8 @@
                         <div class='portfolio-box-content--txt'>
                             <h2>Music App</h2>
                             <p> A lovely music application that lets you choose and play one of the songs from the playlist. It was created
-                                in React.js, as a part of the Creative React and Redux Course</p>
-                            <p>Added features: play/pause music, select song, update time, skip back/forward.</p>
-                            <p>All sounds and images are available on the Chillhop Music platform.</p>
+                                in React.js as a part of the Creative React and Redux Course.</p>
+                            <p>Added features: play/pause music, select song, update time, skip back/forward. All sounds and images are available on the Chillhop Music platform.</p>
                         </div>
                     </div>
                     <!-- img -->
@@ -309,8 +308,8 @@
                     <div class='portfolio-box-content mySlides4'>
                         <div class='portfolio-box-content--txt'>
                             <h2>Meditate App</h2>
-                            <p>MeditateAPP helps keep calm and relax your mind and body... it's so important nowadays. Just play the chosen
-                                sound, watch the video and stay calm, relax and positive.</p>
+                            <p>MeditateAPP helps to keep calm and relaxes your mind and body... it's so important nowadays. Just play the chosen
+                                sound, watch the video, and stay positive.</p>
                             <p>Application created in HTML, CSS, JavaScript. Added features: select music/video, select duration,
                                 start/stop, page load (css animation).</p>
                             <p>Images, and icons are available at: pexels.com, pixabay.com, unsplash.com, and
@@ -355,17 +354,17 @@
                             <h2>FOXdesign</h2>
                             <p>Website created for a local web design&development services. Colors used and fox's logo refer to
                                 the town where the company is based - Foxford in Co. Mayo, Ireland. </p>
-                            <p>The main purpose of the website was to display information about the offer, prices, web design
-                                process, etc. The website was created in web technologies like HTML, CSS, JavaScript, and GSAP. </p>
+                            <p>The main purpose of the website was to present information about the offer, prices, web design
+                                process, etc. The website was created in web technologies such as HTML, CSS, JavaScript, and GSAP. </p>
                             <p>Added animations: GSAP stagger, scrollTrigger, modal box, slide boxes.
-                                The logo was created as an SVG file in Figma to be able to animate it with GSAP. </p>
+                                The logo was created as an SVG file in Figma to enable animation with GSAP.</p>
                         </div>
                     </div>
                     <!-- img -->
                     <div class='portfolio-box-content mySlides5'>
                         <img class='img-desktop' src='./assets/img/fox.png' alt="FOXdesign - desktop">
                         <img class='img-mobile' src='./assets/img/fox-mobile.jpg' alt="FOXdesign - mobile device">
-                    d</div>
+                    </div>
                     <!-- buttons -->
                     <div class="buttons-container">
                         <i onclick="plusSlides(-1, 4)" class="fas fa-long-arrow-alt-left"></i>
@@ -396,11 +395,11 @@
                     <div class='portfolio-box-content mySlides6'>
                         <div class='portfolio-box-content--txt'>
                         <h2>Stylove</h2>
-                            <p>The main goal of the project was to improve my web design nad front-end development skills. The Stylove website
+                            <p>The main goal of the project was to improve my web design and front-end development skills. The Stylove website
                                 can be used by hair & beauty salons, which can add information about specific services,
                                 history, prices, offers, contact details, gallery, etc.</p>
                             <p>The Stylove website was created in web technologies such as HTML, CSS, JavaScript. There are added animations
-                                such as moving icons or pop-up modal. </p>
+                                such as moving icons and a pop-up modal. </p>
                             <p>Images, and icons are available at: pexels.com, pixabay.com, unsplash.com, and
                                 fontawesome.com.
                             </p>
